--- a/ProjectAngular/src/app/app.component.html
+++ b/ProjectAngular/src/app/app.component.html
@@ -16,6 +16,6 @@
 
 <app-navbar></app-navbar>
 <div class="container">
-<app-cards [card]="card" ></app-cards>
+<app-home></app-home>
 <router-outlet></router-outlet>
 </div>
